--- a/static/styles.css
+++ b/static/styles.css
@@ -21,7 +21,7 @@ nav .navbar-brand .green { color: #2e944b; }
 
 /* Backgrounds */
 body.login-page {
-    background-image: url(/static/Harvard.jpg);
+    background-image: url(/static/Harvard.png);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
