--- a/static/styles.css
+++ b/static/styles.css
@@ -28,7 +28,7 @@ body.login-page {
     background-attachment: fixed;
 }
 body.index-page {
-    background-image: url(/static/test.jpg);
+    background-image: url(/static/Harvard.png);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center 20%;
